# CPP_example

./: .gitignore
01-Helloworld/: 01-hello  01-hello.cpp  02-enum  02-enum.cpp  03-type  03-type.cpp  04-func  04-func.cpp  05-math  05-math.cpp  06-array  06-array.cpp  07-vector  07-vector.cpp  08-eigen_vector  08-eigen_vector.cpp  09-pointer  09-pointer.cpp  10-union  10-union.cpp  11-Structur  11-Structur.cpp  12-template  12-template.cpp  13-constructor  13-constructor.cpp  14-class  14-class.cpp  15-class_inherit  15-class_inherit.cpp  16-string  16-string.cpp  17-dynamicmemory  17-dynamicmemory.cpp  18-dynamicmemory  18-dynamicmemory.c  19-json  19-json.cpp  20-stringToNumber  20-stringToNumber.cpp
02-cmake/: cmake.md
02-cmake/ex1/: CMakeLists.txt
02-cmake/ex1-helloworld/src/: main.cpp
02-cmake/ex1/src/: main
02-cmake/ex2-add_subdirectory/: CMakeLists.txt
02-cmake/ex2/src/: main.cpp
02-cmake/ex3-todolist/: CMakeLists.txt  ToDo.cc  ToDo.h  main.cc
02-cmake/ex4-add_subdirectory/: CMakeLists.txt
03-eigen/: CMakeLists.txt
03-eigen/src/: 01-eigen-example.cpp
04-headfile/: CMakeLists.txt
04-headfile/include/: Circle.h
04-headfile/src/: Circle.cpp  main.cpp
05-cv_cpp/01-perspectiveTransform/: CMakeLists.txt
05-cv_cpp/01-perspectiveTransform/src/: perspectiveTransform.cpp
05-cv_cpp/02-image2base64/: CMakeLists.txt
05-cv_cpp/02-image2base64/src/: image2base64.cpp
05-cv_cpp/03-image-encode-decode/: CMakeLists.txt
05-cv_cpp/03-image-encode-decode/src/: image-encode-decode.cpp
06-PCL/01-pcd_write/: CMakeLists.txt
06-PCL/01-pcd_write/src/: pcd_write.cpp
06-PCL/02-class_bilateral_filter/: CMakeLists.txt
06-PCL/02-class_bilateral_filter/include/pcl/filters/: bilateral.h
06-PCL/02-class_bilateral_filter/include/pcl/filters/impl/: bilateral.hpp
06-PCL/02-class_bilateral_filter/src/: bilateral.cpp
06-PCL/03-point_cloud_transformation/: CMakeLists.txt
06-PCL/03-point_cloud_transformation/src/: matrix_transform.cpp
06-PCL/04-type_of_points/: CMakeLists.txt
06-PCL/04-type_of_points/src/: new_point_type.cpp
06-PCL/05-PointCloud_segmentation/: CMakeLists.txt
06-PCL/05-PointCloud_segmentation/src/: pointcloud_segmentation.cpp
06-PCL/06-Crophull_filter/: CMakeLists.txt
06-PCL/06-Crophull_filter/src/: crophull_filter.cpp
06-PCL/07-VoxelGrid/: CMakeLists.txt
06-PCL/07-VoxelGrid/src/: voxel_grid.cpp
06-PCL/08-VoxelGrid_planes/: CMakeLists.txt
06-PCL/08-VoxelGrid_planes/src/: voxel_grid_planes.cpp
06-PCL/09-Boundingbox/: CMakeLists.txt
06-PCL/09-Boundingbox/src/: bounding_box.cpp
07-couchbase/: README.md
07-couchbase/01-C_test/: 01-hello_couchbase  01-hello_couchbase.c  02-hello_couchbase  02-hello_couchbase.c  03-dokumente  03-dokumente.c  04-minimal  04-minimal.c
07-couchbase/02-cxx_test/01-cxx-example/: CMakeLists.txt  cxx_test.cpp
07-couchbase/02-cxx_test/02-cxx-image/: CMakeLists.txt
07-couchbase/02-cxx_test/02-cxx-image/include/: base64.h
07-couchbase/02-cxx_test/02-cxx-image/src/: cxx_image.cpp
07-couchbase/03-nodejs_test/: test.js
07-couchbase/04-libcouchbase-cxx/: example.cpp
07-couchbase/04-libcouchbase-cxx/tests/: CMakeCache.txt  Makefile  cmake_install.cmake
