CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(image2base64)

add_compile_options(-std=c++11)

find_package(OpenCV 3.0 REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

INCLUDE_DIRECTORIES(
    include
    ${OpenCV_INCLUDE_DIRS}
)

IF(NOT MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -pedantic")
ENDIF()

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)


IF(WIN32)
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ELSE()
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
ENDIF()



ADD_EXECUTABLE(image2base64 src/image2base64.cpp)
TARGET_LINK_LIBRARIES(image2base64 ${OpenCV_LIBRARIES}) 

ENABLE_TESTING()
